package matriculas.model;

public class Secretaria extends Usuario {

    public Secretaria(String id, String nome, String senha) {
        super(id, nome, senha);
    }
}
