package matriculas.model;

public enum SituacaoDisciplina {
    ABERTA,
    ATIVA,
    CANCELADA
}
