package matriculas.model;

public enum SituacaoMatricula {
    ATIVA,
    CANCELADA
}
