package matriculas.model;

public enum TipoDisciplina {
    OBRIGATORIA,
    OPTATIVA
}
