package matriculas.service;

import matriculas.model.Aluno;

public class AlunoService {

    public void cadastrar(Aluno aluno) {
    }
}
