package matriculas.service;

import matriculas.model.Usuario;

public class AutenticacaoService {

    public boolean autenticar(Usuario usuario, String senha) {
        return false;
    }
}
