package matriculas.service;

import java.util.List;
import matriculas.model.Curriculo;
import matriculas.model.Disciplina;

public class CurriculoService {

    public Curriculo gerar(String semestre) {
        return null;
    }

    public void adicionarDisciplina(Curriculo curriculo, Disciplina disciplina) {
    }

    public List<Disciplina> listarDisciplinasDisponiveis(Curriculo curriculo) {
        return null;
    }
}
