package matriculas.service;

import matriculas.model.Curso;
import matriculas.model.Disciplina;

public class CursoService {

    public Curso criar(String nome, int numeroCreditos) {
        return null;
    }

    public void atualizar(Curso curso) {
    }

    public void remover(Curso curso) {
    }

    public void adicionarDisciplina(Curso curso, Disciplina disciplina) {
    }

    public void removerDisciplina(Curso curso, Disciplina disciplina) {
    }
}
