package matriculas.service;

import matriculas.model.Curso;
import matriculas.model.Disciplina;
import matriculas.model.Professor;
import matriculas.model.TipoDisciplina;

public class DisciplinaService {

    public Disciplina criar(String nome, TipoDisciplina tipo, Curso curso, Professor professor) {
        return null;
    }

    public void atualizar(Disciplina disciplina) {
    }

    public void remover(Disciplina disciplina) {
    }

    public boolean temVagas(Disciplina disciplina) {
        return false;
    }

    public int totalMatriculados(Disciplina disciplina) {
        return 0;
    }

    public void avaliarSituacao(Disciplina disciplina) {
    }
}
