package matriculas.service;

import matriculas.model.Aluno;
import matriculas.model.Disciplina;
import matriculas.model.Matricula;

public class MatriculaService {

    public Matricula matricular(Aluno aluno, Disciplina disciplina, String semestre) {
        return null;
    }

    public void cancelar(Matricula matricula) {
    }
}
