package matriculas.service;

import java.util.Date;
import matriculas.model.PeriodoMatricula;

public class PeriodoMatriculaService {

    public PeriodoMatricula definir(Date inicio, Date fim) {
        return null;
    }

    public void abrir(PeriodoMatricula periodo) {
    }

    public void encerrar(PeriodoMatricula periodo) {
    }

    public boolean estaAberto(PeriodoMatricula periodo) {
        return false;
    }
}
