package matriculas.service;

import java.util.List;
import matriculas.model.Aluno;
import matriculas.model.Disciplina;
import matriculas.model.Professor;

public class ProfessorService {

    public void cadastrar(Professor professor) {
    }

    public List<Aluno> consultarAlunosMatriculados(Professor professor, Disciplina disciplina) {
        return null;
    }
}
