package matriculas.service;

import java.util.List;
import matriculas.model.Aluno;
import matriculas.model.Disciplina;

public class SistemaCobrancaService implements SistemaCobranca {

    @Override
    public void notificar(Aluno aluno, String semestre, List<Disciplina> disciplinas) {
    }
}
